# imap_processing

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Open_issue_TEMPLATE.md.html  README.md  codecov.yml  conftest.py  imap_swapi_l1_sci_20240924_v001.cdf  package-lock.json  pyproject.toml  swapi_plot.py  swe_l1a_10.nc  swe_l1a_14.nc  swe_l1a_18.nc  swe_l1a_2.nc  swe_l1a_22.nc  swe_l1a_6.nc
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/issue_templates/: Algorithim_development.md  Bug_reporting.md  General_issue.md
.github/workflows/: docs.yml  release.yml  test.yml
container_templates/matlab/container_example/: Dockerfile  README.md
container_templates/python/container_example/: .gitignore  Dockerfile  README.md  requirements.txt  run_container_example.sh
docs/: Makefile  README.md
docs/source/: conf.py  index.rst
docs/source/code-documentation/: cdf.rst  cli.rst  codice.rst  glows.rst  hi.rst  hit.rst  idex.rst  index.rst  lo.rst  mag.rst  spice.rst  swapi.rst  swe.rst  ultra.rst
docs/source/data-access/: data-dependency.rst  index.rst  openapi.yml
docs/source/data-access-api/: calibration-files.rst  index.rst  openapi.yml
docs/source/development/: cdf_guide.rst  doc-overview.rst  git-and-github-workflow.rst  index.rst  naming_conventions.rst  release-workflow.rst  style-guide.md  style-guide.rst  technology-stack.rst
docs/source/development-guide/: doc-overview.rst  docker.rst  getting-started.rst  index.rst
docs/source/external-tools/: index.rst  poetry.rst
docs/source/project-management/: index.rst  requirement-and-issue-tracking.rst  sdc-sit-plan.rst  work-management.rst
docs/source/reference/: codice.rst  glows.rst  hi.rst  hit.rst  index.rst  swe.rst
docs/source/rest-api/: index.rst  openapi.yml
examples/: Dockerfile.imap_api  Dockerfile.processing
imap_processing/: __init__.py  cdf_utils.py  cli.py  common_cdf_attrs.py  decom.py  decom_csv.py  io.py  pointing_frame_handler.py  quality_flags.py  run_processing.py  utils.py  write_to_cdf.py
imap_processing/ccsds/: ccsds_data.py  excel_to_xtce.py
imap_processing/cdf/: __init__.py  cdf_attribute_manager.py  const.py  defaults.py  global_attrs.py  imap_cdf_data.py  imap_cdf_manager.py  utils.py
imap_processing/cdf/config/: imap_codice_global_cdf_attrs.yaml  imap_codice_l1a_variable_attrs.yaml  imap_codice_l1b_variable_attrs.yaml  imap_constant_attrs.yaml  imap_default_global_cdf_attrs.yaml  imap_glows_global_cdf_attrs.yaml  imap_glows_l1a_variable_attrs.yaml  imap_glows_l1b_variable_attrs.yaml  imap_hi_global_cdf_attrs.yaml  imap_hi_variable_attrs.yaml  imap_hit_global_cdf_attrs.yaml  imap_hit_l1a_variable_attrs.yaml  imap_hit_l1b_variable_attrs.yaml  imap_idex_global_cdf_attrs.yaml  imap_idex_l1_variable_attrs.yaml  imap_idex_l1a_variable_attrs.yaml  imap_idex_l2_variable_attrs.yaml  imap_instrument_global_cdf_attrs.yaml  imap_instrument_level_variable_attrs.yaml  imap_lo_global_cdf_attrs.yaml  imap_lo_l1a_variable_attrs.yaml  imap_lo_l1b_variable_attrs.yaml  imap_lo_l1c_variable_attrs.yaml  imap_mag_global_cdf_attrs.yaml  imap_mag_l1_variable_attrs.yaml  imap_mag_l1a_variable_attrs.yaml  imap_swapi_global_cdf_attrs.yaml  imap_swapi_variable_attrs.yaml  imap_swe_global_cdf_attrs.yaml  imap_swe_l1a_variable_attrs.yaml  imap_swe_l1b_variable_attrs.yaml  imap_test_global.yaml  imap_test_variable.yaml  imap_ultra_global_cdf_attrs.yaml  imap_ultra_l1a_variable_attrs.yaml  imap_ultra_l1b_variable_attrs.yaml  imap_ultra_l1c_variable_attrs.yaml
imap_processing/cdf/tests/: imap_default_global_test_cdf_attrs.yaml  imap_instrument1_global_cdf_attrs.yaml  imap_instrument2_global_cdf_attrs.yaml  imap_instrument2_level2_variable_attrs.yaml  imap_test_global.yaml  imap_test_variable.yaml  test_utils.py  (+3 more)
imap_processing/cdfutils/: defaults.py  global_base.py
imap_processing/codice/: __init__.py  cdf_attrs.py  codice_cdf_attrs.py  codice_l0.py  codice_l1a.py  codice_l1b.py  constants.py  decom.py  decompress.py  generate_ccsds_header_xml.py  make_xtce.py  utils.py
imap_processing/glows/: __init__.py  glows_cdf_attrs.py
imap_processing/hi/: hi_cdf_attrs.py  utils.py
imap_processing/hit/: __init__.py  hit_cdf_attrs.py
imap_processing/idex/: IDEXPacketParser.py  __init__.py  constants.py  idex_cdf_attrs.py  idex_constants.py  idex_l0.py  idex_l1.py  idex_l1a.py  idex_packet_parser.py
imap_processing/mag/: __init__.py  constants.py  mag_cdf_attrs.py
imap_processing/ois/: ois_ingest.py
imap_processing/packet_definitions/: swe_packet_definition.xml
imap_processing/spice/: __init__.py  geometry.py  kernels.py  pointing_frame_handler.py  spin.py  time.py
imap_processing/swapi/: swapi_cdf_attrs.py  swapi_utils.py
imap_processing/swe/: __init__.py  decom_swe.py  decommutation_swe.py  l1a_swe.py  swe_cdf_attrs.py
imap_processing/tests/: conftest.py  imap_swe_l1_test_20100101_20100101_v01.cdf  test_cli.py  test_data_access.py  test_decom.py  test_io.py  test_quality_flags.py  test_utils.py
imap_processing/ultra/: constants.py  decom_ultra.py  ultra_cdf_attrs.py  ultra_metadata_example.json
style_guide/: README.md
tools/metadata_generation/: metadata_generator.py
tools/quality_flags/: l1b_quality_flag_definitions.py  quality_flag_definitions.py  quality_flags.py
tools/spice/: README.md  spice_examples.py  spice_examples_partners.py  spice_output_data.csv  spice_utils.py
tools/tests/: test_xtce_generator_template.py
tools/xtce_generation/: 26850.02-TLMDEF-04.xlsx  CcsdsHeaderXtceGenerator.py  TLM_COD.xlsx  TLM_HIT_modified.xls  TLM_MAG_SCI.xls  TLM_SWP_20231006-121021.xlsx  ccsds-header.xml  ccsds_header_xtce_generator.py  generate_ccsds_header_xml.py  telemetry_generator.py  test_xtce_generator_template.py  tlm_glx_2023_06_22-edited.xlsx  xtce_generator_codice.py  xtce_generator_glows.py  xtce_generator_hi.py  xtce_generator_hit.py  xtce_generator_lo.py  xtce_generator_mag.py  xtce_generator_swapi.py  xtce_generator_swe.py  xtce_generator_template.py
(+613 files in other folders)
