[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "imap-processing"
version = "0.1.0"
description = "IMAP Science Operations Center Processing"
authors = ["IMAP SDC Developers <imap.sdc@lists.lasp.colorado.edu>"]
readme = "README.md"
license = "MIT"
keywords = ["IMAP", "SDC", "SOC", "Science Operations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
xarray = '>=2023.0.0'
space_packet_parser = ">=4.1.0,<5"
bitstring = ">=4.0.1,<5"
cdflib = "^1.2.3"

# Optional dependencies
black = {version="^23.1.0", optional=true}
pre-commit = {version="^3.3.3,<4", optional=true}
pydata-sphinx-theme = {version="*", optional=true}
pytest = {version=">=6.2.5,<7", optional=true}
pytest-cov = {version="^4.0.0", optional=true}
ruff = {version="^0.0.253", optional=true}
sphinx = {version="*", optional=true}
myst-parser = {version="^2.0.0", optional=true}
numpydoc = {version="^1.5.0", optional=true}
pandas = {version=">=2.0.0,<3", optional=true}
openpyxl = {version=">=3.0.7,<4", optional=true}


[tool.poetry.extras]
dev = ["black", "pre-commit", "ruff"]
doc = ["myst-parser", "numpydoc", "pydata-sphinx-theme", "sphinx"]
test = ["pytest", "pytest-cov"]
tools= ["pandas", "openpyxl"]

[project.urls]
homepage = "https://github.com/IMAP-Science-Operations-Center"
repository = "https://github.com/IMAP-Science-Operations-Center/imap_processing"

[tool.pytest.ini_options]
testpaths = [
  "imap_processing",
]
addopts = "-ra"


[tool.ruff]
target-version = "py39"
select = ["B", "D", "E", "F", "I", "N", "S", "W", "PL", "PT", "UP", "RUF"]
ignore = ["D100", "D104", "PLR2004", "S101"]

[tool.ruff.per-file-ignores]
"*/tests/*" = ["D"]
"tools/xtce*" = ["D"]
# TODO: Too many statements, this could be refactored and removed
# by creating a loop over a predefined mapping
"imap_processing/idex/idex_packet_parser.py" = ["PLR0915"]

[tool.ruff.pydocstyle]
convention = "numpy"
